Updated Modals, styling & fixes
Logic
--------
- Duplicate tracks are reported accordingly
- Successful import dialog only shows up when non duplicates are indeed imported
- Successful import dialog reports for only non duplicates when there are indeed any
- Status message is cleared in `beforeDestroy` of `App.vue` to avoid persisted messages
- `items` field of reporter message objects are reset to an empty `Array()` instead of `null` during clear call
- Scrollbar resize moved to mounted hook to avoid `undefined` error report
- `updatedWindow` fn and `resizeThead` now get called together in `App.vue` `onresize` call fn (`handle_window_resize`)

Style
--------
- Animation for modals removed and replaced with `transition`
- Changed vanish transition for empty pool to a drop-like one
- Fixed some CSS style bugs in `dark` and `night` theme

--- a/static/theme/dark.css
+++ b/static/theme/dark.css
@@ -7,7 +7,7 @@ body {
 
 /* Scrollbar track */
 ::-webkit-scrollbar {
-    background: #b7b8b9;
+    background: #212121;
 }
 
 /* Scrollbar thumb */
