--- a/static/theme/night.css
+++ b/static/theme/night.css
@@ -52,7 +52,7 @@ body {
     color: orange;
 }
 
-.faile-message .cancel-btn svg path {
+.fail-message .cancel-btn svg path {
     fill: orange;
 }
 
